# CV-Course

./: README.md
HW1_Video/src/: CMakeLists.txt  main.cpp  transition.cpp  transition.h
HW2_FitEllipse/src/: CMakeLists.txt  main.cpp
HW3_EigenFace/src/test/: CMakeLists.txt  test.cpp
HW3_EigenFace/src/train/: CMakeLists.txt  train.cpp
HW4_birdeye/result/: intrinsics.xml
HW4_birdeye/src/: CMakeLists.txt  example_18-01.cpp  example_18-01_from_disk.cpp  example_19-01.cpp
HW5_LeNet/model/: lenet.data-00000-of-00001  lenet.index
HW5_LeNet/src/: config.py  lenet.py  run.py
